--- a/src/index.scss
+++ b/src/index.scss
@@ -86,7 +86,7 @@
         width: 185px;
         height: 23px;
         transform: skew(-29deg) translateX(-50%);
-        background: #5c6cff;
+        background: #031aea;
         z-index: -2;
     }
 }
